[gd_scene load_steps=2 format=3 uid="uid://uy5g8tn4x5im"]

[ext_resource type="Script" path="res://Home.gd" id="1_wudhg"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wudhg")

[node name="Home" type="Button" parent="."]
layout_mode = 0
offset_top = 141.0
offset_right = 55.0
offset_bottom = 172.0
text = "Home"

[node name="Volume" type="VSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.042
anchor_bottom = 0.153
offset_left = 1.0
offset_top = 3.0
offset_right = 0.615997
offset_bottom = 2.856
max_value = 1.0
step = 0.01
value = 1.0

[node name="Label" type="Label" parent="Volume"]
layout_mode = 0
offset_top = 110.0
offset_right = 59.0
offset_bottom = 133.0
text = "Volume"

[node name="BPM" type="VSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.043
anchor_bottom = 0.159
offset_left = 83.0
offset_right = 82.464
offset_bottom = -0.0320053
min_value = 60.0
max_value = 240.0
value = 120.0

[node name="Label" type="Label" parent="BPM"]
layout_mode = 0
offset_left = 3.0
offset_top = 111.0
offset_right = 43.0
offset_bottom = 134.0
text = "BPM"

[connection signal="pressed" from="Home" to="." method="_on_home_pressed"]
[connection signal="value_changed" from="Volume" to="." method="_on_volume_value_changed"]
[connection signal="value_changed" from="BPM" to="." method="_on_bpm_value_changed"]
